[gd_scene load_steps=6 format=2]

[ext_resource path="res://Controller.gd" type="Script" id=7]
[ext_resource path="res://shader_material.tres" type="Material" id=8]
[ext_resource path="res://Sprite4.gd" type="Script" id=9]
[ext_resource path="res://HSlider.gd" type="Script" id=10]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_vertical_guides_": [ -142.0 ]
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 128, 64 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="RichTextLabel" type="RichTextLabel" parent="Viewport"]
modulate = Color( 0.117647, 0.878431, 0.129412, 1 )
self_modulate = Color( 0.980392, 0.780392, 0.780392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 80.0
margin_bottom = 8.0
custom_constants/shadow_as_outline = 0
text = "333333333333333333
333333333333333333
333333333333333333
333333333333333333"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_sin" type="Node" parent="."]

[node name="slider" type="VBoxContainer" parent="time_sin"]
margin_left = 189.0
margin_top = 302.0
margin_right = 916.0
margin_bottom = 374.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="time_sin/slider"]
margin_right = 727.0
margin_bottom = 14.0
text = "time_sin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="time_sin/slider"]
margin_top = 18.0
margin_right = 727.0
margin_bottom = 34.0
max_value = 10.0
step = 0.01
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite4" type="TextureRect" parent="."]
material = ExtResource( 8 )
margin_left = 253.0
margin_top = 224.0
margin_right = 381.0
margin_bottom = 299.0
texture = SubResource( 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_cos" type="Node" parent="."]

[node name="slider" type="VBoxContainer" parent="time_cos"]
margin_left = 202.363
margin_top = 350.0
margin_right = 929.363
margin_bottom = 384.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="time_cos/slider"]
margin_right = 727.0
margin_bottom = 14.0
text = "time_cos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="time_cos/slider"]
margin_top = 18.0
margin_right = 727.0
margin_bottom = 34.0
max_value = 10.0
step = 0.01
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amplitude_x" type="Node" parent="."]

[node name="slider" type="VBoxContainer" parent="amplitude_x"]
margin_left = 189.0
margin_top = 400.0
margin_right = 916.0
margin_bottom = 434.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="amplitude_x/slider"]
margin_right = 727.0
margin_bottom = 14.0
text = "amplitude_x 20.000001"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="amplitude_x/slider"]
margin_top = 18.0
margin_right = 727.0
margin_bottom = 34.0
step = 0.01
value = 20.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amplitude_y" type="Node" parent="."]

[node name="slider" type="VBoxContainer" parent="amplitude_y"]
margin_left = 189.0
margin_top = 450.0
margin_right = 916.0
margin_bottom = 522.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="amplitude_y/slider"]
margin_right = 727.0
margin_bottom = 14.0
text = "amplitude_y 20.000001"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="amplitude_y/slider"]
margin_top = 18.0
margin_right = 727.0
margin_bottom = 34.0
step = 0.01
value = 20.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
